[gd_scene load_steps=8 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=4]
[ext_resource path="res://art/House In a Forest Loop.ogg" type="AudioStream" id=5]
[ext_resource path="res://art/gameover.wav" type="AudioStream" id=6]
[ext_resource path="res://art/play_field.png" type="Texture" id=7]
[ext_resource path="res://fingers/FingerSpawner.tscn" type="PackedScene" id=8]

[node name="Main" type="Node"]
script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 640, 360 )
texture = ExtResource( 7 )

[node name="MovementLimits" type="ReferenceRect" parent="."]
margin_left = 239.0
margin_top = 420.0
margin_right = 1020.0
margin_bottom = 527.0

[node name="Player" parent="." instance=ExtResource( 3 )]

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 240, 450 )

[node name="FingerSpawner" parent="." instance=ExtResource( 8 )]

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.337255, 0.337255, 0.337255, 0.898039 )

[node name="HUD" parent="." instance=ExtResource( 4 )]

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
